<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="@string/ad_activity_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView19"
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/edit_email"
        android:layout_alignBottom="@+id/edit_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edit_email"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView19"
        android:layout_toEndOf="@+id/textView19"
        android:layout_marginLeft="54dp"
        android:layout_marginStart="54dp"
        android:text="@string/ad_activity_email" />

    <TextView
        android:text="@string/ad_activity_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:id="@+id/textView20"
        android:textSize="16sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edit_phone"
        android:layout_alignBaseline="@+id/textView20"
        android:layout_alignBottom="@+id/textView20"
        android:layout_alignLeft="@+id/edit_email"
        android:layout_alignStart="@+id/edit_email"
        android:textSize="16sp"
        android:text="@string/ad_activity_phone" />

    <TextView
        android:text="@string/register_district"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:id="@+id/textView21"
        android:textSize="16sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_editDistrict"
        android:spinnerMode="dialog"
        android:layout_alignTop="@+id/textView21"
        android:layout_alignLeft="@+id/edit_phone"
        android:layout_alignStart="@+id/edit_phone" />

    <TextView
        android:text="@string/register_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_editDistrict"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:id="@+id/textView22"
        android:textSize="16sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView22"
        android:layout_alignLeft="@+id/spinner_editDistrict"
        android:layout_alignStart="@+id/spinner_editDistrict"
        android:id="@+id/spinner_editCity"
        android:spinnerMode="dialog" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_below="@+id/spinner_editCity"
        android:layout_alignLeft="@+id/spinner_editCity"
        android:layout_alignStart="@+id/spinner_editCity"
        android:layout_marginTop="19dp"
        android:id="@+id/edit_description"
        android:textSize="16sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/register_desctiption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView23"
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/edit_description"
        android:layout_alignBottom="@+id/edit_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/button_editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:id="@+id/button_editPassword"
        android:layout_below="@+id/edit_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/button_saveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/button_saveChanges"
        android:layout_below="@+id/button_editPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>