<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="@string/register_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_regUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:id="@+id/textView12"
        android:textSize="16sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText_regPhone"
        android:layout_below="@+id/editText_regEmail"
        android:layout_alignLeft="@+id/editText_regEmail"
        android:layout_alignStart="@+id/editText_regEmail"
        android:layout_marginTop="13dp"
        android:textSize="16sp" />

    <TextView
        android:text="@string/register_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/editText_regPhone"
        android:layout_alignBottom="@+id/editText_regPhone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_regDistrict"
        android:spinnerMode="dialog"
        android:layout_alignBottom="@+id/textView14"
        android:layout_alignLeft="@+id/editText_regPhone"
        android:layout_alignStart="@+id/editText_regPhone"
        android:entries="@array/district_items"/>

    <TextView
        android:text="@string/register_district"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/textView14"
        android:textSize="16sp"
        android:layout_below="@+id/editText_regPhone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/register_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:id="@+id/textView16"
        android:textSize="16sp"
        android:layout_below="@+id/textView14"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_regCity"
        android:spinnerMode="dialog"
        android:layout_alignBottom="@+id/textView16"
        android:layout_alignLeft="@+id/spinner_regDistrict"
        android:layout_alignStart="@+id/spinner_regDistrict"
        android:entries="@array/city_items"/>

    <TextView
        android:text="@string/register_desctiption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView16"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp"
        android:id="@+id/textView18"
        android:textSize="16sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText_regEmail"
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/textView12"
        android:layout_alignBottom="@+id/textView12"
        android:layout_toRightOf="@+id/textView12"
        android:layout_toEndOf="@+id/textView12"
        android:layout_marginLeft="91dp"
        android:layout_marginStart="91dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_regUsername"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editText_regEmail"
        android:layout_alignStart="@+id/editText_regEmail" />

    <TextView
        android:text="@string/register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/editText_regUsername"
        android:layout_alignBottom="@+id/editText_regUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_below="@+id/spinner_regCity"
        android:layout_alignLeft="@+id/spinner_regCity"
        android:layout_alignStart="@+id/spinner_regCity"
        android:layout_marginTop="18dp"
        android:id="@+id/editText_regDescription"
        android:textSize="16sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_regDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:id="@+id/textView15"
        android:textSize="16sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_regPassword"
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/textView15"
        android:layout_alignBottom="@+id/textView15"
        android:layout_alignLeft="@+id/editText_regDescription"
        android:layout_alignStart="@+id/editText_regDescription"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/register_repeat_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_regPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:id="@+id/textView17"
        android:textSize="16sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_regRepeatPassword"
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/textView17"
        android:layout_alignBottom="@+id/textView17"
        android:layout_alignLeft="@+id/editText_regPassword"
        android:layout_alignStart="@+id/editText_regPassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_regRepeatPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:id="@+id/button_register"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>