<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="@string/new_ad_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/editText_editAdTitle"
        android:layout_alignBottom="@+id/editText_editAdTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|textCapSentences"
        android:ems="10"
        android:id="@+id/editText_editAdTitle"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textCapSentences"
        android:ems="10"
        android:layout_below="@+id/editText_editAdTitle"
        android:layout_alignLeft="@+id/editText_editAdTitle"
        android:layout_alignStart="@+id/editText_editAdTitle"
        android:layout_marginTop="14dp"
        android:id="@+id/editText_editAdText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/new_ad_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/editText_editAdText"
        android:layout_alignBottom="@+id/editText_editAdText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/new_ad_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_editAdText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:id="@+id/textView10"
        android:textSize="18sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignLeft="@+id/editText_editAdText"
        android:layout_alignStart="@+id/editText_editAdText"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:id="@+id/spinner_editAdCat1"
        android:spinnerMode="dialog"
        android:entries="@array/cat_1" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/spinner_editAdCat2"
        android:spinnerMode="dialog"
        android:layout_below="@+id/spinner_editAdCat1"
        android:layout_alignLeft="@+id/spinner_editAdCat1"
        android:layout_alignStart="@+id/spinner_editAdCat1"
        android:entries="@array/__" />

    <Button
        android:text="@string/edit_ad_cancel_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_editAdCancel"
        android:layout_below="@+id/button_editAdConfirm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton_addMoreImages"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout_editImages"></LinearLayout>

    <Button
        android:text="@string/edit_ad_save_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_editAdConfirm"
        android:layout_below="@+id/linearLayout_editImages"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_add_a_photo_black_24dp"
        android:id="@+id/imageButton_addMoreImages"
        android:layout_below="@+id/spinner_editAdCat2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" />

    <TextView
        android:text="@string/edit_ad_add_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView24"
        android:textSize="16sp"
        android:layout_marginBottom="11dp"
        android:layout_above="@+id/linearLayout_editImages"
        android:layout_toRightOf="@+id/imageButton_addMoreImages"
        android:layout_toEndOf="@+id/imageButton_addMoreImages" />

    <!--<GridView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/gridview_editImages"-->
        <!--android:layout_gravity="center"-->
        <!--android:columnWidth="90dp"-->
        <!--android:gravity="center"-->
        <!--android:numColumns="3"-->
        <!--android:stretchMode="columnWidth"-->
        <!--android:layout_below="@+id/imageButton_addMoreImages"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_marginTop="10dp" />-->

</RelativeLayout>